SOS-1826 Fixing large gap between content and header when zooming out.

--- a/themes/so-strata-theme/docroot/_diffs/css/color_schemes/normal/normal.css
+++ b/themes/so-strata-theme/docroot/_diffs/css/color_schemes/normal/normal.css
@@ -545,7 +545,6 @@ input.aui-form-validator-error, textarea.aui-form-validator-error, select.aui-fo
 
 div#navigation {
 	background: $navigationBgColor;
-	border-right: 1px solid $defaultBorderColor;
 	float: left;
 	margin-left: -156px;
 	width: 155px;
